Fix CSS: Alignment of button text in grid changes if href tag is set

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -214,3 +214,11 @@
 .btn-sm {
   @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $btn-font-size-sm, $btn-border-radius-sm);
 }
+
+//
+// Buttons with `a` tag
+//
+a.btn {
+  display: flex;
+  align-items: center;
+}
